--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
